--- a/app/src/main/res/layout/activity_add_exercise.xml
+++ b/app/src/main/res/layout/activity_add_exercise.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Activities.AddExerciseActivity">
+    tools:context=".Activities.AddWorkoutActivity">
 
     <EditText
         android:id="@+id/editTextText"
@@ -21,17 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editTextNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:textColor="@color/white"
-        android:hint="weight"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+
 
     <Button
         android:id="@+id/add_btn"
