--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="teal">#047481</color>
+    <color name="blue">#0A84FF</color>
+    <color name="grey">#0F0F0F</color>
 </resources>
