--- a/app/src/main/res/layout/chart_item.xml
+++ b/app/src/main/res/layout/chart_item.xml
@@ -3,24 +3,50 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@color/grey"
+    android:padding="10dp">
 
     <LinearLayout
         android:id="@+id/chartContainer"
         android:layout_width="409dp"
         android:layout_height="490dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
+        android:layout_marginEnd="5dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/workout_textview" />
+        app:layout_constraintTop_toBottomOf="@+id/last_lift">
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/workout_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:textSize="20sp"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/last_lift"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Last Lift - 25Kg"
+        android:textColor="@color/white"
+        android:textSize="10sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/workout_textview" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Add weight"
+        app:layout_constraintBottom_toBottomOf="@+id/chartContainer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
