--- a/app/src/main/res/layout/chart_item.xml
+++ b/app/src/main/res/layout/chart_item.xml
@@ -9,8 +9,8 @@
 
     <LinearLayout
         android:id="@+id/chartContainer"
-        android:layout_width="409dp"
-        android:layout_height="490dp"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:layout_marginEnd="5dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,10 +43,11 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:layout_weight="1"
         android:text="Add weight"
-        app:layout_constraintBottom_toBottomOf="@+id/chartContainer"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chartContainer" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
