--- a/app/src/main/res/layout/dialog_add_workout.xml
+++ b/app/src/main/res/layout/dialog_add_workout.xml
@@ -17,7 +17,10 @@
         android:clipToPadding="false"
         android:padding="16dp"
         android:scrollbars="none" />
-
+<Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/submit_button"/>
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="wrap_content"
