--- a/app/src/main/res/layout/chart_item.xml
+++ b/app/src/main/res/layout/chart_item.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/workout_textview" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/add_weight_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
