--- a/app/src/main/res/layout/activity_body_part.xml
+++ b/app/src/main/res/layout/activity_body_part.xml
@@ -52,7 +52,7 @@
         android:layout_below="@+id/cover"
         />
     <Button
-        android:id="@+id/button"
+        android:id="@+id/add_new_workout_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
