--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,7 +96,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="8dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/biceps" />
+                    android:src="@drawable/chest" />
 
                 <!-- Gradient overlay -->
                 <View
@@ -158,7 +158,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="8dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/shoulder" />
+                    android:src="@drawable/biceps" />
 
                 <!-- Gradient overlay -->
                 <View
@@ -219,7 +219,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="8dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/shoulder" />
+                    android:src="@drawable/triceps" />
 
                 <!-- Gradient overlay -->
                 <View
@@ -280,7 +280,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="8dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/shoulder" />
+                    android:src="@drawable/leg" />
 
                 <!-- Gradient overlay -->
                 <View
@@ -402,7 +402,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="8dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/shoulder" />
+                    android:src="@drawable/core" />
 
                 <!-- Gradient overlay -->
                 <View
