--- a/app/src/main/res/layout/chart_item.xml
+++ b/app/src/main/res/layout/chart_item.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginEnd="5dp"
+
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +26,7 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="20sp"
+
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,12 +38,13 @@
         android:text="Last Lift - 25Kg"
         android:textColor="@color/white"
         android:textSize="10sp"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/workout_textview" />
 
     <Button
         android:id="@+id/add_weight_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:layout_weight="1"
